# Tetris

./: .gitignore  CMakeLists.txt  README.md
doc/: Tetris.drawio
src/: board.cpp  board.h  color.cpp  color.h  common.h  game.cpp  game.h  i_board.h  i_game.h  i_player.h  i_save_service.h  main.cpp  piece.cpp  piece.h  player.cpp  player.h  renderer.cpp  renderer.h  tetrino.cpp  tetrino.h
